# distrostrap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/distrostrap/: __init__.py  __main__.py  app.py  cli.py  term.py
src/distrostrap/bootloader/: detect.py  grub.py  host_grub.py
src/distrostrap/config/: fstab.py  hostname.py  locale.py  network.py  timezone.py  users.py
src/distrostrap/core/: chroot.py  context.py  executor.py  host_info.py  pipeline.py  safety.py
src/distrostrap/distros/: arch.py  base.py  fedora.py  registry.py  ubuntu.py
src/distrostrap/partition/: create.py  detect.py  format.py  layout.py  mount.py
tests/: conftest.py
tests/unit/: test_context.py  test_fstab.py  test_layout.py  test_registry.py  test_safety.py
